npm audit fix cross-spawn, increase engine limit
cross-spawn  7.0.0 - 7.0.4
Severity: high
Regular Expression Denial of Service (ReDoS) in cross-spawn - https://github.com/advisories/GHSA-3xgq-45jj-v275
fix available via `npm audit fix`
node_modules/cross-spawn

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:dev": "webpack --config webpack.dev.js",
     "serve": "node server.js",
     "start": "npm run build:prod && env NODE_ENV=production npm run serve",
-    "start:dev": "npm run build:dev && env NODE_ENV=development npm run serve",
+    "start:dev": "npm run build:dev && npm run serve",
     "format": "prettier --write .",
     "lint": "eslint ."
   },
@@ -49,6 +49,6 @@
     "test": "test"
   },
   "engines": {
-    "node": "20"
+    "node": ">=20"
   }
 }
